@@ -2,6 +2,7 @@
 ! Updates to string formatting
 ! Updated roots/snares
 ! API bump
+! Fix for subeffects not clearing properly
 + Added notifications to notify when a new version was detected or user uses the beta version
 + Added option to mute sound when under hard cc
 
